Cambios label botones redireccion y filtro de log poco informativo

--- a/app_diagnosis__elganso_magento.json
+++ b/app_diagnosis__elganso_magento.json
@@ -11,7 +11,7 @@
     "layout": {
         "botonLog": {
             "componente": "YBButton",
-            "label": "Ver log",
+            "label": "Ir a log",
             "buttonType": "raised",
             "action": {
                 "key": "gotolog"
