--- a/app_diagnosis__elganso_magento_error.json
+++ b/app_diagnosis__elganso_magento_error.json
@@ -13,7 +13,7 @@
     "layout": {
         "botonLog": {
             "componente": "YBButton",
-            "label": "Ver log",
+            "label": "Ir a log",
             "buttonType": "raised",
             "action": {
                 "key": "gotolog"
