--- a/app_diagnosis__menu_diagnosis.json
+++ b/app_diagnosis__menu_diagnosis.json
@@ -97,6 +97,13 @@
             "URL": "diagnosis/yb_log/custom/sanhigia_magento_log",
             "ICON": "list",
             "COLOR": "rgb(0, 103, 206)"
+        },
+        {
+            "NAME": "globalprotlog",
+            "TEXT": "GLOBALPROT LOG",
+            "URL": "diagnosis/yb_log/custom/globalprot_log",
+            "ICON": "list",
+            "COLOR": "rgb(0, 103, 206)"
         }
 
     ]
