Quitar logs del menu y adaptar iconos

--- a/app_diagnosis__elganso_diagnosis.json
+++ b/app_diagnosis__elganso_diagnosis.json
@@ -11,6 +11,14 @@
     },
     "title": "Diagnosis",
     "layout": {
+        "botonLog": {
+            "componente": "YBButton",
+            "label": "Ir a log",
+            "buttonType": "raised",
+            "action": {
+                "key": "gotolog"
+            }
+        },
         "queryGrid_diagnosismonitor": {
             "componente": "YBList",
             "prefix": "diagnosismonitor",
@@ -24,5 +32,10 @@
             "rowclick": ""
         }
     },
-    "acciones": {}
+    "acciones": {
+        "gotolog": {
+            "action": "url",
+            "url": "diagnosis/yb_log/custom/elganso_diagnosis_log"
+        }
+    }
 }
