--- a/app_diagnosis__elganso_inventarios_log.json
+++ b/app_diagnosis__elganso_inventarios_log.json
@@ -8,8 +8,16 @@
         "s_tipo__startswith": "egsyncinv"
     },
     "schema": {},
-    "title": "Log Ventas",
+    "title": "Log Inventarios",
     "layout": {
+        "botonProcesos": {
+            "componente": "YBButton",
+            "label": "Ir a procesos",
+            "buttonType": "raised",
+            "action": {
+                "key": "gotoproccess"
+            }
+        },
         "logGrid": {
             "componente": "YBGrid",
             "class": "claseGrid",
@@ -24,5 +32,10 @@
             ]
         }
     },
-    "acciones": {}
+    "acciones": {
+        "gotoproccess": {
+            "action": "url",
+            "url": "diagnosis/yb_procesos/custom/elganso_inventarios"
+        }
+    }
 }
