--- a/app_diagnosis__elganso_diagnosis_log.json
+++ b/app_diagnosis__elganso_diagnosis_log.json
@@ -36,7 +36,8 @@
                         "diaganalyticalways": "Analytic Always",
                         "diagdevolucionesweb": "Devoluciones Web",
                         "diagsolrepoweb": "Sol. repo. Web",
-                        "diagbloqueos": "Bloqueos"
+                        "diagbloqueos": "Bloqueos",
+                        "diagsincroventasobjeto": "Sincro Ventas Objeto"
                     }
                 }
             },
