--- a/app_diagnosis__elganso_magento_error.json
+++ b/app_diagnosis__elganso_magento_error.json
@@ -11,12 +11,19 @@
     "schema": {},
     "title": "Magento Errores",
     "layout": {
-        "botonLog": {
-            "componente": "YBButton",
-            "label": "Ir a log",
-            "buttonType": "raised",
-            "action": {
-                "key": "gotolog"
+        "groupBoxAcciones": {
+            "componente": "YBGroupBox",
+            "className": "actionGB",
+            "layout": {
+                "botonLog": {
+                    "componente": "YBButton",
+                    "label": "Ir a log",
+                    "buttonType": "raised",
+                    "className": "floatLeft",
+                    "action": {
+                        "key": "gotolog"
+                    }
+                }
             }
         },
         "erroneosGrid": {
