--- a/app_diagnosis__elganso_ventas_log.json
+++ b/app_diagnosis__elganso_ventas_log.json
@@ -10,12 +10,28 @@
     "schema": {},
     "title": "Log Ventas",
     "layout": {
-        "botonProcesos": {
-            "componente": "YBButton",
-            "label": "Ir a procesos",
-            "buttonType": "raised",
-            "action": {
-                "key": "gotoproccess"
+        "groupBoxAcciones": {
+            "componente": "YBGroupBox",
+            "className": "actionGB",
+            "layout": {
+                "botonProcesos": {
+                    "componente": "YBButton",
+                    "label": "Ir a procesos",
+                    "buttonType": "raised",
+                    "className": "floatLeft",
+                    "action": {
+                        "key": "gotoproccess"
+                    }
+                },
+                "botonErroneos": {
+                    "componente": "YBButton",
+                    "label": "Ir a erróneos",
+                    "buttonType": "raised",
+                    "className": "floatLeft",
+                    "action": {
+                        "key": "gotoerror"
+                    }
+                }
             }
         },
         "logGrid": {
@@ -36,6 +52,10 @@
         "gotoproccess": {
             "action": "url",
             "url": "diagnosis/yb_procesos/custom/elganso_ventas"
+        },
+        "gotoerror": {
+            "action": "url",
+            "url": "diagnosis/yb_procesos_erroneos/custom/elganso_ventas_error"
         }
     }
 }
