Nuevo proceso para comprobar movimientos de stock de ventas

--- a/app_diagnosis__elganso_diagnosis_log.json
+++ b/app_diagnosis__elganso_diagnosis_log.json
@@ -44,7 +44,8 @@
                         "diagdevolucionesweb": "Devoluciones Web",
                         "diagsolrepoweb": "Sol. repo. Web",
                         "diagbloqueos": "Bloqueos",
-                        "diagsincroventasobjeto": "Sincro Ventas Objeto"
+                        "diagsincroventasobjeto": "Sincro Ventas Objeto",
+                        "diagmovistockventas": "Movimientos de stock de ventas"
                     }
                 }
             },
