--- a/app_diagnosis__globalprot_drupal.json
+++ b/app_diagnosis__globalprot_drupal.json
@@ -47,6 +47,20 @@
                     "label": "Parar",
                     "success": [{"slot": "refrescar", "custom": "globalprot_procesos"}]
                 }
+            ],
+            "accionesGrid": [
+                {
+                    "tipo": "button",
+                    "key": "stopall",
+                    "label": "Parar todos",
+                    "success": [{"slot": "refrescar"}]
+                },
+                {
+                    "tipo": "button",
+                    "key": "startall",
+                    "label": "Iniciar todos",
+                    "success": [{"slot": "refrescar"}]
+                }
             ]
         }
     },
@@ -62,6 +76,16 @@
             "prefix": "yb_procesos",
             "serverAction": "stop",
             "icon": "pause_circle_outline"
+        },
+        "startall": {
+            "action": "gridAction",
+            "prefix": "yb_procesos",
+            "serverAction": "startall"
+        },
+        "stopall": {
+            "action": "gridAction",
+            "prefix": "yb_procesos",
+            "serverAction": "stopall"
         },
         "gotolog": {
             "action": "url",
