Mejoras en los logs

--- a/app_diagnosis__elganso_b2b_log.json
+++ b/app_diagnosis__elganso_b2b_log.json
@@ -39,6 +39,7 @@
             "class": "claseGrid",
             "prefix": "yb_log",
             "colorRowField": "rowColor",
+            "buscador": true,
             "filter": {
                 "tipo": {
                     "filterType": "multiseleccion",
