--- a/app_diagnosis__elganso_b2c.json
+++ b/app_diagnosis__elganso_b2c.json
@@ -21,6 +21,15 @@
                     "action": {
                         "key": "gotolog"
                     }
+                },
+                "botonErroneos": {
+                    "componente": "YBButton",
+                    "label": "Ir a erróneos",
+                    "buttonType": "raised",
+                    "className": "floatLeft",
+                    "action": {
+                        "key": "gotoerror"
+                    }
                 }
             }
         },
@@ -90,6 +99,10 @@
         "gotolog": {
             "action": "url",
             "url": "diagnosis/yb_log/custom/elganso_b2c_log"
+        },
+        "gotoerror": {
+            "action": "url",
+            "url": "diagnosis/yb_procesos_erroneos/custom/elganso_b2c_error"
         }
     }
 }
