--- a/app_diagnosis__elganso_diagnosis_log.json
+++ b/app_diagnosis__elganso_diagnosis_log.json
@@ -30,6 +30,7 @@
             "class": "claseGrid",
             "prefix": "yb_log",
             "colorRowField": "rowColor",
+            "buscador": true,
             "filter": {
                 "tipo": {
                     "filterType": "multiseleccion",
