--- a/app_diagnosis__dashboard.json
+++ b/app_diagnosis__dashboard.json
@@ -9,7 +9,7 @@
             "componente": "YBNewRecordGoTo",
             "class": "info",
             "icon": "add",
-            "goto": "yb_procesos/newRecord"
+            "goto": "yb_clientessincro/newRecord"
         }
     },
     "acciones": {}
