--- a/app_diagnosis__menu_diagnosis.json
+++ b/app_diagnosis__menu_diagnosis.json
@@ -1,96 +1,3 @@
 {
-    "items": [
-        {
-            "NAME": "elgansoactivity",
-            "TEXT": "ELGANSO ACTIVIDAD",
-            "URL": "diagnosis/yb_procesos/custom/elganso_activity",
-            "ICON": "settings",
-            "COLOR": "rgb(0, 0, 0)"
-        },
-        {
-            "NAME": "elgansodiagproc",
-            "TEXT": "ELGANSO DIAGNOSIS",
-            "URL": "diagnosis/yb_log/custom/elganso_diagnosis",
-            "ICON": "local_hospital",
-            "COLOR": "rgb(182, 0, 6)"
-        },
-        {
-            "NAME": "elgansomgproc",
-            "TEXT": "ELGANSO B2C",
-            "URL": "diagnosis/yb_procesos/custom/elganso_b2c",
-            "ICON": "language",
-            "COLOR": "rgb(0, 103, 186)"
-        },
-        {
-            "NAME": "elgansob2b",
-            "TEXT": "ELGANSO B2B",
-            "URL": "diagnosis/yb_procesos/custom/elganso_b2b",
-            "ICON": "language",
-            "COLOR": "rgb(0, 103, 186)"
-        },
-        {
-            "NAME": "elgansomirakl",
-            "TEXT": "ELGANSO MIRAKL",
-            "URL": "diagnosis/yb_procesos/custom/elganso_mirakl",
-            "ICON": "language",
-            "COLOR": "rgb(0, 103, 186)"
-        },
-        {
-            "NAME": "elgansovtproc",
-            "TEXT": "ELGANSO VENTAS",
-            "URL": "diagnosis/yb_procesos/custom/elganso_ventas",
-            "ICON": "store",
-            "COLOR": "rgb(6, 160, 0)"
-        },
-        {
-            "NAME": "elgansoinvproc",
-            "TEXT": "ELGANSO INVENTARIOS",
-            "URL": "diagnosis/yb_procesos/custom/elganso_inventarios",
-            "ICON": "storage",
-            "COLOR": "rgb(6, 160, 0)"
-        },
-        {
-            "NAME": "guanabanaactivity",
-            "TEXT": "GUANABANA ACTIVIDAD",
-            "URL": "diagnosis/yb_procesos/custom/guanabana_activity",
-            "ICON": "settings",
-            "COLOR": "rgb(0, 0, 0)"
-        },
-        {
-            "NAME": "guanabanamgproc",
-            "TEXT": "GUANABANA MAGENTO",
-            "URL": "diagnosis/yb_procesos/custom/guanabana_magento",
-            "ICON": "language",
-            "COLOR": "rgb(0, 103, 186)"
-        },
-        {
-            "NAME": "sanhigiaactivity",
-            "TEXT": "SANHIGIA ACTIVIDAD",
-            "URL": "diagnosis/yb_procesos/custom/sanhigia_activity",
-            "ICON": "settings",
-            "COLOR": "rgb(0, 0, 0)"
-        },
-        {
-            "NAME": "sanhigiamgproc",
-            "TEXT": "SANHIGIA MAGENTO",
-            "URL": "diagnosis/yb_procesos/custom/sanhigia_magento",
-            "ICON": "language",
-            "COLOR": "rgb(0, 103, 186)"
-        },
-         {
-            "NAME": "globalprotactivity",
-            "TEXT": "GLOBALPROT ACTIVIDAD",
-            "URL": "diagnosis/yb_procesos/custom/globalprot_activity",
-            "ICON": "settings",
-            "COLOR": "rgb(0, 0, 0)"
-        },
-        {
-            "NAME": "globalprotproc",
-            "TEXT": "GLOBALPROT DRUPAL",
-            "URL": "diagnosis/yb_procesos/custom/globalprot_drupal",
-            "ICON": "language",
-            "COLOR": "rgb(0, 103, 186)"
-
-        }               
-    ]
+    "items": []
 }
