--- a/app_diagnosis__newrecordyb_procesos.json
+++ b/app_diagnosis__newrecordyb_procesos.json
@@ -26,7 +26,8 @@
                         "url": {},
                         "syncapi": {},
                         "syncstore": {},
-                        "syncrecieve": {}
+                        "syncrecieve": {},
+                        "syncauto": {}
                     }
                 }
             },
