--- a/app_diagnosis__yb_gruposprocesos.json
+++ b/app_diagnosis__yb_gruposprocesos.json
@@ -129,21 +129,9 @@
             ],
             "accionesGrid": [
                 {
-                    "tipo": "button",
-                    "key": "stopall",
-                    "label": "Parar todos",
-                    "success": [{"slot": "refrescar"}]
-                },
-                {
-                    "tipo": "button",
-                    "key": "startall",
-                    "label": "Iniciar todos",
-                    "success": [{"slot": "refrescar"}]
-                },
-                {
                     "key": "nuevoproceso",
                     "label": "Nuevo",
-                    "success": [{ "slot": "refrescar"}]
+                    "success": [{"slot": "refrescar"}]
                 }
             ],
             "rowclick": "link"
@@ -182,8 +170,8 @@
                     "values": {
                         "Éxito. No hay datos que sincronizar": "No hay datos",
                         "Éxito. No es momento de sincronizar": "No es momento",
-                        "Info. Proceso detenido": "Detenido",
-                        "Info. Proceso arrancado": "Arrancado"
+                        "Info. Proceso arrancado": "Arrancado",
+                        "Info. Proceso detenido": "Detenido"
                     }
                 }
             },
@@ -257,16 +245,6 @@
             "label": "Nuevo",
             "action": "newRow",
             "icon": "add_circle"
-        },
-        "startall": {
-            "action": "gridAction",
-            "prefix": "yb_procesos",
-            "serverAction": "startall"
-        },
-        "stopall": {
-            "action": "gridAction",
-            "prefix": "yb_procesos",
-            "serverAction": "stopall"
         }
     },
     "drawIf": {
